<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/post_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/pasindu_username"
            android:textSize="12dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/post_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="15dp"
            android:text="@string/pasindu_date"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/post_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:paddingStart="15dp"
            android:text="@string/pasindu_time"
            android:textSize="12dp" />

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:padding="0dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_image_black_24dp" />

        <TextView
            android:id="@+id/single_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/pasindu_post_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/pasindu_post_description" />



    </LinearLayout>
    
</android.support.v7.widget.CardView>