<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gardient_login"
    tools:context="com.example.ganesh.appchat.SettingActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_iv_user_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/user"/>

    <TextView
        android:id="@+id/setting_tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_iv_user_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/setting_full_name"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/setting_tv_user_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_tv_full_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/setting_hi_there_i_am_using_factchat"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"/>

    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/setting_cv_change_image_btn"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_below="@+id/setting_tv_user_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/colorDarkBlue"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#ffffff"
                android:text="@string/setting_change_image_btn"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/setting_cv_change_status_btn"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_below="@+id/setting_cv_change_image_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/colorwhatsappLightYellow"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#000000"
                android:text="@string/setting_change_status_btn"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/setting_cv_change_password_btn"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_below="@+id/setting_cv_change_status_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/colorRed"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#ffffff"
                android:text="@string/setting_change_password_btn"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>





</RelativeLayout>
