<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@drawable/gradient_welcome"
    tools:context="com.example.ganesh.appchat.LoginActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">



        <ImageView
            android:id="@+id/welcome_iv_logopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/launcher_icon2"
            android:layout_below="@id/welcome_tv_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>


        <EditText
            android:id="@+id/login_et_email"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:shadowColor="@color/colorBlack"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:drawableStart="@drawable/ic_action_email"
            android:textStyle="bold"
            android:layout_below="@+id/welcome_iv_logopic"
            android:hint="@string/login_e_mail_address"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:background="@drawable/edit_text_round"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/color_theme_light_lime_green"/>

        <EditText
            android:id="@+id/login_et_password"
            android:layout_below="@+id/login_et_email"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:shadowColor="@color/colorBlack"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_action_password"
            android:textStyle="bold"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:background="@drawable/edit_text_round"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/color_theme_light_lime_green"/>

        <TextView
            android:id="@+id/login_tv_error"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:text=""
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/colorRed"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_et_password"
            android:layout_marginTop="10dp"/>


        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/login_cv_login_btn"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_below="@+id/login_et_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            app:cardBackgroundColor="@color/colorwhatsappLightYellow"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="#000000"
                    android:text="@string/welcome_login_btn"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>



</ScrollView>
